--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,9 @@
         {% block stylesheets %}
 			
 			<!-- CSS Bootstrap -->
-			<link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+			<!--<link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
+
+			<link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css"/>
 			
         {% endblock %}
     </head>
@@ -76,10 +78,10 @@
         {% block javascripts %}
 		
 			<!-- JS Bootstrap -->
-			<script src="../assets/bootstrap/js/bootstrap.min.js" type="text/javascript"/></script>
+			<script src="{{ asset('assets/assets/bootstrap/js/bootstrap.min.js') }}" type="text/javascript"/></script>
 			
 			<!-- JQuery -->
-			<script src="../assets/jquery/jquery.min.js" type="text/javascript"/></script>
+			<script src="{{ asset('assets/jquery/jquery.min.js') }}" type="text/javascript"/></script>
 			
         {% endblock %}
     </body>
